2007-08-28  Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, cimXmlGen.h, cimXmlGen.c:
	Fixed: 1780595: xml special chars are not escaped in error description

2007-08-28  Sven Schuetz <sven@de.ibm.com>

	* objectImpl.h, objectImplSwapI32toP32.c, constClass.c,
	classProvider.c, objectImpl.c, classProviderMem.c,
	constClass.h, cimXmlRequest.c, cimXmlGen.c, objectpath.c:
	Fixed 1685254: sfcb does not return REFERENCECLASS in GetClass

2007-08-01  Adrian Schuur

        * cimXmlGen.c, constClass.c, constClass.h:
        Fixed 1764101: segfault in constClass::getPropQualifierAt()

2007-08-01  Tyrel Datwyler <tyreld@us.ibm.com>

   * classProviderGz.c:
   Fixed 1746659: SFCB segfaults when ai commands are issued simultaneously

2007-08-01  Sven Schuetz <sven@de.ibm.com>

        * cimXmlGen.c, objectImpl.c:
        Fixed 1763178: GetClass operation failure

2007-08-01  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c:
	Fixed 1754811: sfcb misses refences/referenceNames call in certain
	upcalls

2007-07-10  Sven Schuetz <sven@de.ibm.com>

	* cimXmlParser.c:
	Fixed 1752715: sfcb does not unescape incoming blanks

2007-07-24  Adrian Schuur

	* internalProvider.c:
	Fixed 1759208: internalProvider segfaults when object not found

2007-07-10  Sven Schuetz <sven@de.ibm.com>

	* objectpath.c:
	Fixed 1751084 sfcb does not support a hostname in an objectpath

2007-07-09  Sven Schuetz <sven@de.ibm.com>

	* default.reg, providerMgc.c:
	Fixed 1748392: associations in interop namespace might not work

2007-07-07  Tyrel Datwyler <tyreld@us.ibm.com>

   * classProvider.c, classProviderGz.c:
   Fixed 1746771: Memory leak in classProviderGz.c - in gatherNameSpaces()

2007-07-07  Tyrel Datwyler <tyreld@us.ibm.com>

   * httpAdapter.c:
   Fixed 1725493: 401 send twice

2007-07-03  Adrian Schuur

	* objectPath.c:
	Fixed 1745103: bad key property when addKey done with type CMPI_chars

2007-06-29  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c, providerMgr.h, cimXmlRequest.c: